[project]
name = "csv-processor"
version = "0.1.0"
description = "CSV Processor task"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.23.0",
    "python-dotenv>=1.0.0"
]
authors = [{name = "Almog Bendavid", email = "almog@example.com"}]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.0.310",
    "mypy>=1.4.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.9",
]
