[project]
name = "csv-processor"
version = "0.1.0"
description = "CSV Processor service with mocked S3, mocked DB, async queue, worker, CLI, and FastAPI API"
requires-python = ">=3.11"
authors = [
    { name = "Almog Bendavid", email = "almog@example.com" }
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.23.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "ruff>=0.14.9",
    "mypy>=1.19.0",
]

cli = [
    "typer>=0.12.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
]
